--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.I210724"
         tools:targetApi="31">
         <activity
+            android:name=".community"
+            android:exported="false" />
+        <activity
+            android:name=".chat2"
+            android:exported="false" />
+        <activity
+            android:name=".MyProfile"
+            android:exported="false" />
+        <activity
+            android:name=".profile"
+            android:exported="false" />
+        <activity
             android:name=".chats"
             android:exported="false" />
         <activity
